# llrs

./: .gitignore  Cargo.toml
libllrs/: Cargo.toml
libllrs/src/: lib.rs
llrs-api/: Cargo.toml
llrs-api/src/: main.rs
llrs-model/: Cargo.toml
llrs-model/src/: lib.rs
llrs-site/: Cargo.toml  package-lock.json  package.json  style.scss  webpack.config.js
llrs-site/src/: app.rs  lib.rs  route.rs
llrs-site/src/agents/: chapter.rs  manga.rs  mod.rs  page.rs  user.rs
llrs-site/src/app/: app_navbar.rs  mod.rs
llrs-site/src/components/: breadcrumb.rs  mod.rs  navbar.rs
llrs-site/src/pages/: chapter_list.rs  home.rs  manga_list.rs  manga_page.rs  mod.rs  not_found.rs  progress.rs
llrs-site/static/: index.html
