[package]
name = "libllrs"
version = "0.1.0"
authors = ["limegrass <james@niis.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tiberius = { version = "0.5.5", features = ["chrono"] }
thiserror = "1.0.23"
async-trait = "0.1.42"
tokio = { version = "1.0.2", features = [ "net", "io-util" ] }
futures = "0.3.12"
tokio-util = { version = "0.6.1", features = [ "compat" ] }
# TODO: Maybe put chrono behind a feature flag in libllrs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
tokio-test = "0.4.0"
