[package]
name = "llrs-site"
version = "0.1.0"
authors = ["limegrass <james@niis.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
log = { version = "0.4", features = ["release_max_level_warn"] }
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
wee_alloc = { version = "0.4", optional = true }
yew = "0.17"
yew-router = "0.14"
anyhow = "1.0"
llrs_model = { version = "0.1", features = ["serde"], path = "../llrs-model" }
# chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomRect',
  'Element',
  'HtmlElement',
  'HtmlImageElement',
  'KeyboardEvent',
  'ScrollBehavior',
  'ScrollToOptions',
  'Window',
]

[profile.release]
# less code to include into binary
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
